--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -2,6 +2,7 @@
 
 .shows {
     padding: 2vw 5.6vw;
+    min-height: 50vw;
 
     &__list {
         margin-top: 44px;
@@ -34,6 +35,8 @@
             text-transform: uppercase;
             margin: 0 1vw;
             border-bottom: 5px solid transparent;
+            cursor: pointer;
+            
 
             &--is-active {
                 border-color: variaveis.$corTextoSecundario;
