--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -10,6 +10,10 @@
         grid-template-columns: 1fr 1fr 1fr;
         gap: 24px;
 
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr 1fr;
+        }
+
         &--is-active {
             display: grid;
         }
@@ -26,6 +30,12 @@
         display: flex;
         justify-content: center;
 
+        @media (max-height: 768px) {
+            white-space: nowrap;
+            overflow-x: scroll;
+            padding-left: 20px;
+        }
+
         &__button {
             color: variaveis.$corTextoSecundario;
             font-size: 20px;
@@ -35,11 +45,14 @@
             text-transform: uppercase;
             margin: 0 1vw;
             border-bottom: 5px solid transparent;
-            cursor: pointer;
+            cursor: pointer;            
             
-
             &--is-active {
                 border-color: variaveis.$corTextoSecundario;
+            }
+
+            @media (max-height: 768px) {
+                font-size: 16px;
             }
         }
     }
